; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/SPL/src/extr_stm32f4xx_pwr.c_PWR_EnterSTANDBYMode.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/controller/ThirdParty/SPL/src/extr_stm32f4xx_pwr.c_PWR_EnterSTANDBYMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@PWR_CR_CWUF = common dso_local global i32 0, align 4
@PWR = common dso_local global %struct.TYPE_4__* null, align 8
@PWR_CR_PDDS = common dso_local global i32 0, align 4
@SCB_SCR_SLEEPDEEP_Msk = common dso_local global i32 0, align 4
@SCB = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PWR_EnterSTANDBYMode() #0 {
  %1 = load i32, i32* @PWR_CR_CWUF, align 4
  %2 = load %struct.TYPE_4__*, %struct.TYPE_4__** @PWR, align 8
  %3 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %2, i32 0, i32 0
  %4 = load i32, i32* %3, align 4
  %5 = or i32 %4, %1
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @PWR_CR_PDDS, align 4
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** @PWR, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = or i32 %9, %6
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* @SCB_SCR_SLEEPDEEP_Msk, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** @SCB, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = or i32 %14, %11
  store i32 %15, i32* %13, align 4
  %16 = call i32 (...) @__WFI()
  ret void
}

declare dso_local i32 @__WFI(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
